# Manuscript_Pores_2025

./: .gitignore  LICENSE  Manuscript_Notebook.ipynb  Polymer_database.csv  README.md  catalyst_database.csv  pyproject.toml  requirements.txt
Results/TGA/TGA_csv/: Results_F04.csv  Results_F05.csv  Results_F06.csv  Results_H04.csv  Results_L06.csv  Results_M02.csv  Results_M03.csv  Results_M03crushed.csv  Results_S01.csv  Results_S04.csv
Results/TGA/TGA_csv_20C/: Results_F04.csv  Results_L06.csv  Results_S04.csv
Results/TGA/TGA_csv_PP2/: Results_F04.csv  Results_L06.csv  Results_S04.csv
utils/: IR_utils.py  db_query.py  utils.py
